/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    `maven-publish`
    id("com.gradleup.shadow") version "9.0.0"
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    }

    maven {
        url = uri("https://oss.sonatype.org/content/groups/public/")
    }

    maven {
        url = uri("https://repo.dmulloy2.net/repository/public/")
    }

    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }

    maven {
        name = "papermc"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
    mavenCentral()
}

dependencies {
    api(libs.org.jetbrains.annotations)
    compileOnly(libs.net.dmulloy2.protocollib)
    //compileOnly(libs.org.spigotmc.spigot.api)
    compileOnly(libs.paper.api)
    implementation("net.megavex:scoreboard-library-api:2.7.4")
    implementation("net.megavex:scoreboard-library-implementation:2.7.4")
}

group = "com.carterz30cal"
version = "1.0.0"
description = "mcexperiment"

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.shadowJar {
    relocate("net.megavex", "com.carterz30cal.libs.megavex")
    archiveClassifier.set("") // replaces the normal jar as the output
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.register<Copy>("copyJar") {
    dependsOn(tasks.shadowJar)
    from(tasks.shadowJar.get().archiveFile)
    into(layout.buildDirectory.dir("../server/plugins"))
}

tasks.build {
    finalizedBy("copyJar")
}
